create SALE CRUD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-#dummy
+spring.security.user.name=dvnguyen
+spring.security.user.password=dvnguyen
+
+spring.datasource.driver.class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:49171:ORCLCDB
+spring.datasource.username=daddysouvenir
+spring.datasource.password=devekis01
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+#spring.liquibase.drop-first=true
+# create database schema from SQL files
+spring.jpa.hibernate.ddl-auto=none
+logging.level.root=INFO
+
+spring.jmx.enabled=false
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-MASTER.xml
+spring.liquibase.contexts=default
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
