create docker image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.security.user.name=dvnguyen
 spring.security.user.password=dvnguyen
 
 spring.datasource.driver.class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:49171:ORCLCDB
-spring.datasource.username=daddysouvenir
-spring.datasource.password=devekis01
+spring.datasource.url=jdbc:oracle:thin:@localhost:49171:XE
+spring.datasource.username=system
+spring.datasource.password=oracle
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
-#spring.liquibase.drop-first=true
+spring.liquibase.drop-first=true
 # create database schema from SQL files
 spring.jpa.hibernate.ddl-auto=none
 logging.level.root=INFO
