run with docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,17 @@
 version: '3'
 
 services:
-  myapp-mydb:
+  db:
     image: wnameless/oracle-xe-11g-r2
     environment:
       - ORACLE_SID=XE
-    networks:
-      - spring-boot-network
     ports:
-      - '49171:1521'
-      - '49170:22'
-
-  myapp-main:
+      - "49171:1521"
+  web:
     build:
       context: ./
       dockerfile: Dockerfile
-#    restart: on-failure
     depends_on:
-      - myapp-mydb
+      - db
     ports:
-      - 8080:8080
-    networks:
-      - spring-boot-network
-    environment:
-      - DATABASE_HOST=myapp-mysql
-      - DATABASE_USER=daddysouvenir
-      - DATABASE_PASSWORD=devekis01
-      - DATABASE_NAME=XE
-      - DATABASE_PORT=49171
-      - DATABASE_URL=jdbc:oracle:thin:@localhost:49171:XE
-networks:
-  spring-boot-network:
-    driver: bridge
+      - "8080:8080"
