--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'com.h2database:h2'
 
-	implementation group: 'org.liquibase', name: 'liquibase-core'
+	implementation group: 'org.liquibase', name: 'liquibase-core', version: '3.10.2'
+
+	implementation group: 'org.mariadb.jdbc', name:'mariadb-java-client'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
