--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.security.user.name=dvnguyen
 spring.security.user.password=dvnguyen
 
-spring.datasource.driver.class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@db:1521:XE
-spring.datasource.username=system
-spring.datasource.password=oracle
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/daddy_souvenir
+spring.datasource.username=daddy
+spring.datasource.password=daddy-souvenir
+
 spring.liquibase.drop-first=true
 # create database schema from SQL files
 spring.jpa.hibernate.ddl-auto=create
