--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,8 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.2.6.RELEASE'
+	testImplementation 'com.h2database:h2'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
