--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.security.user.password=dvnguyen
 
 spring.datasource.driver.class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@db:1521:XE
-spring.datasource.username=system
-spring.datasource.password=oracle
+spring.datasource.username=daddysouvenir
+spring.datasource.password=devekis01
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 spring.liquibase.drop-first=true
 # create database schema from SQL files
